static/css/linh.css
html{
  min-height: 100%;
  background: rgb(255,255,255);
  background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 66%, rgba(232,232,232,1) 100%, rgba(242,242,242,1) 105%);
  background: -webkit-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 66%, rgba(232,232,232,1) 100%, rgba(242,242,242,1) 105%);
  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 66%, rgba(232,232,232,1) 100%, rgba(242,242,242,1) 105%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#f2f2f2",GradientType=1);
}
body{
  font-family: 'Poppins', sans-serif;
}
h1 {
  color: #2F5181;
  letter-spacing: 0.22rem;
  text-align: center;
}
h2 {
  color: #2F5181;
  letter-spacing: 0.22rem;
  text-align: center;
  font-family: 'Poppins', sans-serif;
  font-size: 18px;
}
p{
  font-size: 22px;
  padding-left: 2rem;
  padding-right: 2rem;
  color:#2b2b2b;
  font-family: 'Poppins';
  font-family: 'Poppins ExtraLight';
}
h2, h2 a{
  text-decoration: none;
  color: #BDCDDE;
  font-family: 'Poppins';
  font-family: 'Poppins ExtraLight', sans-serif;
  font-size: 22px;
}
h2 a:hover{
  color: #2F5181;
}
.item2 a{
  color: #2F5181;
  color: #2F5181EB;
  text-decoration: none;
  padding-right: 2rem;
  padding-left: 2rem;
  letter-spacing: 0.22rem;
  font-family: 'Poppins Regular', sans-serif;
  font-size: 30px;
  font-weight: 300;
  white-space: nowrap;
}
.item2 a:hover{
  color: #BDCDDE;
  color: #BDCDDEEB;
}
.item2 a.active{
}
.linh-page-container {
  display: grid;
  padding: 10px;
}

.grid-linh {
  text-align: center;
  padding: 20px;
  font-size: 30px;
}
.logo {
  grid-column: 1;
  grid-row: 1;
}
.item2 {
  grid-column: 2;
  grid-row: 1;
  width: 36rem;
  margin-left: auto;
  margin-right: auto;
}
.item3 {
  grid-column: 3;
  grid-row: 1;
}
.item3:hover{
  cursor: pointer;
}
.item2, .item3{
  margin-top: 2.5rem;
}
.item4 {
  grid-column: 1 /span 3;
  text-align: center;
  max-width: 1800px;
}
.item5 {
  grid-column: 1 / span 3;
  grid-row: 3;
}
.item4 > img{
  max-height: 35rem;
  margin-right: 2rem;
  margin-bottom: 2rem;
  max-width: 100%;
  transition: transform .2s ease;
}
.item4 > img:hover {
  -webkit-filter: sepia(40%);/* Safari 6.0 - 9.0 */
  filter: sepia(40%);
  cursor: pointer;
}
.overlay {
  height: 100%;
  width: 100%;
  display: none;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(255, 255, 255);
  background-color: rgba(255, 255, 255, 0.9);
}

.overlay-content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}
.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: #2F5181;
  display: block;
  transition: 0.3s;
  padding: 1rem;
  letter-spacing: 0.2rem;
  font-size: 38px;
}

.overlay a:hover, .overlay a:focus {
  color: #B89646;
}

.overlay .closebtn {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
}
.portrait.even{
  border-radius: 0 12px 12px 0;
}
.portrait{
  border-radius: 12px;
}
.landscape.even{
  border-radius: 0 12px 12px 0;
}
.landscape{
  border-radius: 12px;
}
#overlay-show-img{
  padding-top: 2rem;
  max-height: calc(100% - 4rem);
  max-width: 100%;
}
#overlay-image-section{
  text-align: center;
  background: #000000de;
}
#overlay-image-section .closebtn{
  top: 0rem;
  padding-top: 0;
  margin-top: 0;
  filter: brightness(70%);
}
#overlay-image-section .closebtn:hover{
  filter: none;
}
#linh-Nav .closebtn:hover{
  filter: opacity(80%);
}
.about-photo { grid-area: menu; }
.about-text { grid-area: main; }

.about-container {
  display: grid;
  grid-template-areas:
    'menu main main main';
  grid-gap: 2rem;
  padding: 10px;
}

.about-container > div {
  text-align: center;
  padding: 20px 0;
  font-size: 30px;
}
.about-photo {
  text-align: center;
}
.about-photo img{
  max-width: 25rem;
  margin-left: 2rem;
  border-radius: 12px;
}
.about-text p {
  font-size: 22px;
  padding-left: 2rem;
  padding-right: 2rem;
  color:#2b2b2b;
  font-family: 'Poppins ExtraLight';
}
.about-text h1{
  margin-top: -1rem;
  color: #2F5181;
  letter-spacing: 0.22rem;
}
.contact-container{
  text-align: center;
}
.contact-container h1{
  margin-top: -2rem;
}
@media only screen and (max-width: 890px) {
  body{
    overflow-x: hidden;
  }
  .logo {
    grid-area: logo;
    text-align: left;
  }
  .item3 {
    grid-area: menu;
    text-align: right;
  }
  .item2 {
    grid-area: header;
    margin-top: 0;
    width: 100%;
    padding: 0;
    line-height: 4rem;
    margin-bottom: 2rem;
  }
  .item4 {
    grid-area: main;
    margin: 0;
    max-width: 100%;
    padding: 0;
  }
  .item5{ grid-area: footer; }
  .linh-page-container{
    grid-template-areas:
    'logo menu'
    'header header'
    'main main'
    'footer footer';
    padding: 0;
  }
  .overlay-content{
    margin-top:0;
    top: 22%;
  }
  .closebtn{
    top:0;
  }
  .overlay a{
    font-size: 33px;
    padding-bottom: 0;
  }
  #overlay-image-section .closebtn {
    top: -1rem;
    right: 0;
  }
  #overlay-show-img{
    padding-top: 4rem;
  }
  .about-container {
    grid-template-areas: 'menu'
                         'main';
  }
  .about-photo img{
    margin:0;
  }
}
@media only screen and (max-width: 510px) {
  p{
    font-size: 22px;
    padding-left: 0;
    padding-right: 0;
  }
  .about-photo img {
    max-width: 17rem;
  }
}

